# ml-selfcond

./: ACKNOWLEDGEMENTS.MD  LICENSE  README.md  frozen_requirements.txt  pyproject.toml
assets/football/sense/: football-1_04_00__.json
assets/football_small/: concept_list.csv
assets/football_small/sense/: football-1_04_00__.json
assets/gender_bias/: concept_list.csv
assets/gender_bias/sense/: man-1_18_00__.json  woman-1_18_00__.json
git-patches/: fudge.patch  pplm.patch
scripts/: aggregate_perplexities.py  all_plots.py  compute_expertise.py  compute_frequency.py  compute_perplexity.py  compute_perplexity_batch.py  compute_responses.py  compute_selfbleu.py  generate_batch.py  generate_seq.py
selfcond/: __init__.py  data.py  expertise.py  generation.py  models.py  responses.py  selfbleu.py  visualization.py
selfcond/tests/: __init__.py  common_tests.py  test_data.py  test_expertise.py  test_integration.py  test_models.py
